# QQVoice

./: .gitignore  README.md  Readme.md  build.gradle.kts  gradle.properties
QQVoice-hb/: .project  config.html  index.html  manifest.json
QQVoice-hb/css/: config.css  index.css
QQVoice-hb/unpackage/: .confirmed_dependencies  .dependencies
app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts
app/libs/: lib.5plus.base-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/apps/top.kuriko.QQVoice/www/: manifest.json
app/src/main/assets/apps/top.kuriko.QQVoice/www/css/: common.css
app/src/main/assets/apps/top.kuriko.QQVoice/www/js/: fluent-ffmpeg.js
app/src/main/assets/data/: dcloud_control.xml  dcloud_properties.xml
app/src/main/cpp/: .gitignore  android_log.h
app/src/main/cpp/lame-3.100/: .gitignore  Android.mk.executable  Android.mk.shared  Android.mk.static  ndkmake.cmd
app/src/main/cpp/lame-3.100/frontend/: main.h
app/src/main/cpp/lame-3.100/src/: util.h
app/src/main/cpp/silk-v1.0.9/: Android.mk.executable_dec  Android.mk.executable_enc  Android.mk.shared  Android.mk.static  ndkmake.cmd
app/src/main/cpp/silk-v1.0.9/ARM/: Android.mk.shared  Android.mk.static
app/src/main/cpp/silk-v1.0.9/FIX/: Android.mk.shared  Android.mk.static  ndkmake.cmd
app/src/main/cpp/silk-v1.0.9/FLP/: Android.mk.shared  Android.mk.static
app/src/main/etc/: Android.mk  Application.mk  Silk.c  SilkCodec2.c  SilkCodecWrapper.h
app/src/main/etc/qq/qq/wx/voice/vad/: EVad.java  EVadNative.java  TRSilk.java  TRSilkDecoder.java  TRSilkEncoder.java  TRSilkException.java  TRSilkNative.java
app/src/main/etc/qq/tencent/mobileqq/earlydownload/handler/: PttSilkAndChangeVoiceSoHandler.java
app/src/main/etc/qq/tencent/mobileqq/earlydownload/xmldata/: PttSilkAndChangeVoiceSoData.java
app/src/main/etc/qq/tencent/mobileqq/ptt/: PttVoiceChangePreSender.java
app/src/main/etc/qq/tencent/mobileqq/ptt/preop/: PttPreVoiceChanger.java
app/src/main/etc/qq/tencent/mobileqq/utils/: AlbumUtil.java  Amr2PcmWrapper.java  AmrInputStreamWrapper.java  AudioHelper$AudioPlayerParameter.java  AudioHelper.java  AudioUtil.java  Base64Util.java  ConfigUtil.java  ContactConfig.java  ContactUtils.java  CustomHandler.java  FileSizeFormat.java  FileSystemTool.java  FileUtils$StorageInfo.java  FileUtils.java  HexUtil.java  MediaPlayerHelper.java  Patterns.java  Pcm2AmrWrapper.java  PttUtils.java  QQRecorder$OnQQRecorderListener.java  QQRecorder$RecordInitException.java  QQRecorder$RecordNoPermissonException.java  QQRecorder$RecorderParam.java  QQRecorder$RecorderProcessorListener.java  QQRecorder.java  QQUtils.java  RecordParams.java  ReflectedMethods.java  SendMessageHandler$SendMessageRunnable.java  SendMessageHandler.java  SilkCodecWrapper.java  SoLoadReportImpl.java  SoLoadUtil$SoLoadConstant.java  SoLoadUtil.java  UpdataPlayPttStateListener.java  VoiceHelper.java  VoicePlayer$VoicePlayerListener.java  VoicePlayer.java  WupUtil.java
app/src/main/etc/qq/tencent/mobileqq/voicechange/: VoiceChange.java
app/src/main/etc/silk/: Silk16.java  Silk24.java  Silk8.java
app/src/main/etc/silk/src/: SKP_Silk_A2NLSF.c
app/src/main/java/com/tencent/mobileqq/utils/: SilkCodecWrapper.kt
app/src/main/java/top/kuriko/: File.kt
app/src/main/java/top/kuriko/jni/: FFmpeg.kt  Silk.kt
app/src/main/java/top/kuriko/qqvoice/: HookEntry.kt
app/src/main/java/top/kuriko/qqvoice/codec/: ConvertException.kt  FFmpegCmd.kt
app/src/main/java/top/kuriko/qqvoice/codec/audio/: AudioUtils.kt  SilkCmd.kt
app/src/main/java/top/kuriko/qqvoice/data/: Data.kt  Packages.kt  SupportFormat.kt  TargetFormat.kt  UinType.kt
app/src/main/java/top/kuriko/qqvoice/hook/: MainHook.kt  ShareHook.kt
app/src/main/java/top/kuriko/qqvoice/interfaces/: IDisposable.kt
app/src/main/java/top/kuriko/qqvoice/log/: Log.java  LogItem.kt  LogLevel.kt
app/src/main/java/top/kuriko/qqvoice/res/: XR.kt
app/src/main/java/top/kuriko/qqvoice/utils/: ChatUtils.kt  Shell.kt  Utils.kt  XLog.kt
app/src/main/jni/: SilkCodec.c  ffmpeg_cmd.c
app/src/main/jni/silk/interface/: SKP_Silk_SDK_API.h
app/src/main/jni/silk/src/: SKP_Silk_SigProc_FIX.h  SKP_Silk_dec_API.c
app/src/main/res/raw/: silkenc_arm64_v8a  silkenc_armeabi_v7a  silkenc_x86  silkenc_x86_64
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-zh/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
